<resources>
    <string name="app_name">ZNGHTicketManage</string>
    <string name="bt_login_text">账户登陆</string>
    <string name="bt_dev_bind">设备绑定</string>
    <string name="bt_dev_unbind">设备解绑</string>
    <string name="bt_activate_quire">激活查询</string>
    <string name="bt_red_ticket_bill">红票开票</string>
    <string name="bt_blue_ticket_bill">蓝票开票</string>
    <string name="bt_qrCode_text">二维码开票</string>
    <string name="bt_tax_query_text">税率查询</string>

</resources>
