<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margn_width"
        android:text="@string/bt_login_text" />

    <Button
        android:id="@+id/bt_dev_bind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margn_width"
        android:text="@string/bt_dev_bind" />

    <Button
        android:id="@+id/bt_dev_unbind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margn_width"
        android:text="@string/bt_dev_unbind" />

    <Button
        android:id="@+id/bt_activate_quire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margn_width"
        android:text="@string/bt_activate_quire" />

    <Button
        android:id="@+id/bt_red_ticket_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margn_width"
        android:text="@string/bt_red_ticket_bill" />

    <Button
        android:id="@+id/bt_blue_ticket_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margn_width"
        android:text="@string/bt_blue_ticket_bill" />

</LinearLayout>